--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # production
 /build
 
+# Ignorar arquivos de chave privada
+*.pem
+
+# Ignorar arquivos de ambiente
+.env
+
 # misc
 .DS_Store
 .env.local
